--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -32,21 +32,20 @@ Theme by: WebThemez.com
         <div class="logo"><h1><img src="images/logo1.png"/>Kidsphere</h1></div>
       </div>
     </div>
-    <h2>Stay tuned we're launching soon.</h2>
+    <h2>Stay tuned ! we're launching soon!</h2>
     <div class="countdown styled"></div>
   </div>
 </section>
 <section class="subscribe spacing">
   <div class="container">
-
     <div id="subscribe">
       <h3>Subscribe To Get Notified</h3>
 
-        <p class="subscribe-input">
-          <input id="email" type="email" name="Email" size="20"
-                 placeholder="Subscribe your e-mail" value="">
-          <input id="submit" type="submit" value="Submit" name="Subscribe">
-        </p>
+      <p class="subscribe-input">
+        <input id="email" name="Email" placeholder="Subscribe your e-mail" size="20"
+               type="text" value="">
+        <input id="submit" name="Subscribe" type="submit" value="Submit">
+      </p>
 
       <!--For social platform link-->
       <!--<div id="socialIcons">
