--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,7 +14,7 @@ Theme by: WebThemez.com
 <html lang="en"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
-  <title>HTML5 Responsive coming soon page - Fidget</title>
+  <title>Kidsphere</title>
   <meta name="description" content="">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <link rel="stylesheet" type="text/css"
