--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,6 +20,7 @@ Theme by: WebThemez.com
   <link rel="stylesheet" type="text/css"
         href="http://fonts.googleapis.com/css?family=PT+Sans+Narrow:regular,bold">
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+
   <link href="et-line-font/style.css" rel="stylesheet"/>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
@@ -29,22 +30,38 @@ Theme by: WebThemez.com
   <div id="Content" class="wrapper topSection">
     <div id="Header">
       <div class="wrapper">
-        <div class="logo"><h1><img src="images/logo1.png"/>Kidsphere</h1></div>
+        <div class="logo"><h1>Kidsphere</h1></div>
+        <h2>Where to bring your kids for fun? Find out on KidSphere!</h2>
       </div>
     </div>
-    <h2>Stay tuned ! we're launching soon!</h2>
-    <div class="countdown styled"></div>
+    <h3 class="slogan">Search all kid activities near you. Covers entire MA state.</h3>
+    <div class="styled">
+      <h3>Wondering where to download this app? The bad news is...nowhere. </h3>
+      <h3>The good news is: the app is in production! </h3>
+      <h3>Enter your Email below to get notified when we launch! </h3>
+
+    </div>
   </div>
 </section>
 <section class="subscribe spacing">
   <div class="container">
     <div id="subscribe">
-      <h3>Subscribe To Get Notified</h3>
-
+      <h3>Do so if you love our idea. That makes us work harder! </h3>
       <p class="subscribe-input">
-        <input id="email" name="Email" placeholder="Subscribe your e-mail" size="20"
+        <input id="email" name="Email" placeholder="Here is my Email! Love to see KidSphere alive!"
+               size="50"
                type="text" value="">
-        <input id="submit" name="Subscribe" type="submit" value="Submit">
+        <br>
+      <div align="center">
+        <div>I'm using an
+          <select id="os" placeholder="I am using an">
+            <option value="IPHONE">iPhone</option>
+            <option value="ANDROID">Android</option>
+            <option value="OTHER">Other</option>
+          </select></div>
+      </div>
+      <div align="center"><input id="submit" name="Subscribe" type="submit" value="Submit"></div>
+
       </p>
 
       <!--For social platform link-->
@@ -64,57 +81,55 @@ Theme by: WebThemez.com
   <div class="container">
     <h2 class="text-center">Features</h2>
     <div class="row">
-      <div class="col-md-6">
-        <div class="featuresPro">
-          <div class="col-md-3 col-sm-3 col-xs-3 text-center icon"><i class="icon-gift"></i></div>
-          <div class="col-md-9 col-sm-9 col-xs-9">
+      <div class="col-md-12 col-sm-12 col-xs-12">
+        <div class="featuresPro" style="overflow:hidden">
+          <div class="col-md-6 col-sm-6 col-xs-6 text-center icon " style="vertical-align:bottom;">
+            <img height="60%" src="images/CalendarPage.PNG" width="60%"/>
+          </div>
+          <div class="col-md-6 col-sm-6 col-xs-6 text-center"
+               style="vertical-align:bottom;padding-top: 18%">
             <!--features 1-->
-            <h4>Lorem Lpsum</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, beatae, esse,
-              aspernatur, alias odio numquam incidunt perspiciatis aliquid voluptate sapiente.</p>
+            <h2>Search, filter and browse</h2>
+            <h2>It's all near you</h2>
             <!--features 1 end-->
           </div>
         </div>
-        <div class="featuresPro">
-          <div class="col-md-3 col-sm-3 col-xs-3 text-center icon"><i class="icon-trophy"></i></div>
-          <div class="col-md-9 col-sm-9 col-xs-9">
-            <!--features 2-->
-            <h4>Lorem Lpsum</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, beatae, esse,
-              aspernatur, alias odio numquam incidunt perspiciatis aliquid voluptate sapiente.</p>
-            <!--features 2 end-->
+
+        <div class="featuresPro" style="overflow:hidden">
+
+          <div class="col-md-6 col-sm-6 col-xs-6 text-center"
+               style="vertical-align:bottom;padding-top: 18%">
+            <!--features 1-->
+            <h2>View detailed information</h2>
+            <h2>Real comments from parents</h2>
+            <!--features 1 end-->
+          </div>
+          <div class="col-md-6 col-sm-6 col-xs-6 text-center icon " style="vertical-align:bottom">
+            <img height="60%" src="images/DetailedPage.PNG" width="60%"/>
+          </div>
+        </div>
+
+        <div class="featuresPro" style="overflow:hidden">
+          <div class="col-md-6 col-sm-6 col-xs-6 text-center icon " style="vertical-align:bottom;">
+            <img height="60%" src="images/SavedPage.PNG" width="60%"/>
+          </div>
+          <div class="col-md-6 col-sm-6 col-xs-6 text-center"
+               style="vertical-align:bottom;padding-top: 18%">
+            <!--features 1-->
+            <h2>Save your favorite events</h2>
+            <h2>Just one click</h2>
+            <!--features 1 end-->
           </div>
         </div>
       </div>
-      <div class="col-md-6">
-        <div class="featuresPro">
-          <div class="col-md-3 col-sm-3 col-xs-3 text-center icon"><i class="icon-tools"></i></div>
-          <div class="col-md-9 col-sm-9 col-xs-9">
-            <!--features 3-->
-            <h4>Lorem Lpsum</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, beatae, esse,
-              aspernatur, alias odio numquam incidunt perspiciatis aliquid voluptate sapiente.</p>
-            <!--features 3 end-->
-          </div>
-        </div>
-        <div class="featuresPro">
-          <div class="col-md-3 col-sm-3 col-xs-3 text-center icon"><i class="icon-upload"></i></div>
-          <div class="col-md-9 col-sm-9 col-xs-9">
-            <!--features 4-->
-            <h4>Lorem Lpsum</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, beatae, esse,
-              aspernatur, alias odio numquam incidunt perspiciatis aliquid voluptate sapiente.</p>
-            <!--features 4 end-->
-          </div>
-        </div>
-      </div>
+
+
     </div>
   </div>
 </section>
 
 <!--Scripts-->
 <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
-<script type="text/javascript" src="js/jquery.countdown.js"></script>
 <script type="text/javascript" src="js/global.js"></script>
 
 </body>
