--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -52,7 +52,7 @@ Theme by: WebThemez.com
                size="50"
                type="text" value="">
         <br>
-      <div align="center">
+      <div align="center" style="font-size: large;">
         <div>I'm using an
           <select id="os" placeholder="I am using an">
             <option value="IPHONE">iPhone</option>
