--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,7 +14,7 @@ Theme by: WebThemez.com
 <html lang="en"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
-  <title>Kidsphere</title>
+  <title>KidSphere</title>
   <meta name="description" content="">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <link rel="stylesheet" type="text/css"
@@ -30,14 +30,16 @@ Theme by: WebThemez.com
   <div id="Content" class="wrapper topSection">
     <div id="Header">
       <div class="wrapper">
-        <div class="logo"><h1>Kidsphere</h1></div>
-        <h2>Where to bring your kids for fun? Find out on KidSphere!</h2>
+        <div class="logo"><h1>KidSphere</h1></div>
+        <h2>Where to bring your kids for fun?</h2>
+        <h2>Find out on KidSphere!</h2>
       </div>
     </div>
     <h3 class="slogan">Search all kid activities near you. Covers entire MA state.</h3>
     <div class="styled">
-      <h3>Wondering where to download this app? The bad news is...nowhere. </h3>
-      <h3>The good news is: the app is in production! </h3>
+      <h3>Wondering where to download this app? </h3>
+      <h3>The bad news is...nowhere. </h3>
+      <h3>The good news is: the APP is in production! </h3>
       <h3>Enter your Email below to get notified when we launch! </h3>
 
     </div>
@@ -53,7 +55,7 @@ Theme by: WebThemez.com
                type="text" value="">
         <br>
       <div align="center" style="font-size: large;">
-        <div>I'm using an
+        <div>I'm using an&nbsp;
           <select id="os" placeholder="I am using an">
             <option value="IPHONE">iPhone</option>
             <option value="ANDROID">Android</option>
@@ -104,9 +106,7 @@ Theme by: WebThemez.com
             <h2>Real comments from parents</h2>
             <!--features 1 end-->
           </div>
-          <div class="col-md-6 col-sm-6 col-xs-6 text-center icon " style="vertical-align:bottom">
-            <img height="60%" src="images/DetailedPage.PNG" width="60%"/>
-          </div>
+
         </div>
 
         <div class="featuresPro" style="overflow:hidden">
@@ -117,7 +117,7 @@ Theme by: WebThemez.com
                style="vertical-align:bottom;padding-top: 18%">
             <!--features 1-->
             <h2>Save your favorite events</h2>
-            <h2>Just one click</h2>
+            <h2>With just one click</h2>
             <!--features 1 end-->
           </div>
         </div>
