--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -36,88 +36,47 @@ Theme by: WebThemez.com
       </div>
     </div>
     <h3 class="slogan">Search all kid activities near you. Covers entire MA state.</h3>
-    <div class="styled">
-      <h3>Wondering where to download this app? </h3>
-      <h3>The bad news is...nowhere. </h3>
-      <h3>The good news is: the APP is in production! </h3>
-      <h3>Enter your Email below to get notified when we launch! </h3>
 
-    </div>
   </div>
 </section>
-<section class="subscribe spacing">
-  <div class="container">
-    <div id="subscribe">
-      <h3>Do so if you love our idea. That makes us work harder! </h3>
-      <p class="subscribe-input">
-        <input id="email" name="Email" placeholder="Here is my Email! Love to see KidSphere alive!"
-               size="50"
-               type="text" value="">
-        <br>
-      <div align="center" style="font-size: large;">
-        <div>I'm using an&nbsp;
-          <select id="os" placeholder="I am using an">
-            <option value="IPHONE">iPhone</option>
-            <option value="ANDROID">Android</option>
-            <option value="OTHER">Other</option>
-          </select></div>
-      </div>
-      <div align="center"><input id="submit" name="Subscribe" type="submit" value="Submit"></div>
-
-      </p>
-
-      <!--For social platform link-->
-      <!--<div id="socialIcons">
-        <ul>
-          <li><a href="" title="Twitter" class="twitterIcon"></a></li>
-          <li><a href="" title="facebook" class="facebookIcon"></a></li>
-          <li><a href="" title="linkedIn" class="linkedInIcon"></a></li>
-          <li><a href="" title="Pintrest" class="pintrestIcon"></a></li>
-        </ul>
-      </div>-->
-    </div>
-  </div>
-</section>
-
 <section class="features spacing">
   <div class="container">
     <h2 class="text-center">Features</h2>
     <div class="row">
       <div class="col-md-12 col-sm-12 col-xs-12">
         <div class="featuresPro" style="overflow:hidden">
-          <div class="col-md-6 col-sm-6 col-xs-6 text-center icon " style="vertical-align:bottom;">
-            <img height="60%" src="images/CalendarPage.PNG" width="60%"/>
+          <div class="col-md-4 col-sm-4 col-xs-4 text-center icon " style="vertical-align:bottom;">
+            <img height="80%" src="images/CalendarPage.PNG" width="80%"/>
           </div>
-          <div class="col-md-6 col-sm-6 col-xs-6 text-center"
-               style="vertical-align:bottom;padding-top: 18%">
-            <!--features 1-->
-            <h2>Search, filter and browse</h2>
-            <h2>It's all near you</h2>
-            <!--features 1 end-->
+          <div class="col-md-4 col-sm-4 col-xs-4 text-center icon " style="vertical-align:bottom;">
+            <img height="80%" src="images/DetailedPage.PNG" width="80%"/>
+          </div>
+          <div class="col-md-4 col-sm-4 col-xs-4 text-center icon " style="vertical-align:bottom;">
+            <img height="80%" src="images/SavedPage.PNG" width="80%"/>
           </div>
         </div>
 
         <div class="featuresPro" style="overflow:hidden">
 
-          <div class="col-md-6 col-sm-6 col-xs-6 text-center"
-               style="vertical-align:bottom;padding-top: 18%">
+          <div class="col-md-4 col-sm-4 col-xs-4 text-center"
+               style="vertical-align:top">
             <!--features 1-->
-            <h2>View detailed information</h2>
-            <h2>Real comments from parents</h2>
+            <h3>Search, filter and browse</h3>
+            <h3>It's all near you</h3>
             <!--features 1 end-->
           </div>
-
-        </div>
-
-        <div class="featuresPro" style="overflow:hidden">
-          <div class="col-md-6 col-sm-6 col-xs-6 text-center icon " style="vertical-align:bottom;">
-            <img height="60%" src="images/SavedPage.PNG" width="60%"/>
-          </div>
-          <div class="col-md-6 col-sm-6 col-xs-6 text-center"
-               style="vertical-align:bottom;padding-top: 18%">
+          <div class="col-md-4 col-sm-4 col-xs-4 text-center"
+               style="vertical-align:top">
             <!--features 1-->
-            <h2>Save your favorite events</h2>
-            <h2>With just one click</h2>
+            <h3>View detailed information</h3>
+            <h3>Comments from parents</h3>
+            <!--features 1 end-->
+          </div>
+          <div class="col-md-4 col-sm-4 col-xs-4 text-center"
+               style="vertical-align:top">
+            <!--features 1-->
+            <h3>Save your favorite events</h3>
+            <h3>With just one click</h3>
             <!--features 1 end-->
           </div>
         </div>
@@ -127,6 +86,57 @@ Theme by: WebThemez.com
     </div>
   </div>
 </section>
+
+
+<section class="description">
+
+  <div class="styled">
+    <h3>Wondering where to download this app? </h3>
+    <h3>The bad news is...nowhere. </h3>
+    <h3><b style="color:#f03600;font-size: xx-large">The good news</b> &nbsp;is: the APP is in
+      production! </h3>
+    <h3>Enter your Email below to get notified when we launch! </h3>
+    <h4>(Do so if you love our idea. That makes us work harder!)</h4>
+  </div>
+</section>
+
+
+<section class="subscribe spacing">
+
+  <div class="container">
+
+    <div id="subscribe">
+      <h3>Subscribe now and get Update!</h3>
+      <p class="subscribe-input">
+        <input class="subscribe_input" id="email" name="Email"
+               placeholder="Here is my Email! Love to see KidSphere alive!"
+               size="50"
+               type="email" value="">
+        <br>
+      <div align="center" style="font-size: large;">
+        <div>I'm using an&nbsp;
+          <div>
+            <div>
+              <input checked id="iphone" name="os" type="radio"
+                     value="IPHONE">
+              <label for="iphone"
+                     style="font-weight:normal !important;padding-top: 5px">iPhone</label>
+            </div>
+            <div>
+              <input id="android" name="os" type="radio" value="ANDROID">
+              <label for="android" style="font-weight:normal !important;">Android</label>
+            </div>
+          </div>
+          <div align="center"><input id="submit" name="Subscribe" type="submit" value="Submit">
+          </div>
+        </div>
+      </div>
+      </p>
+    </div>
+  </div>
+</section>
+
+
 
 <!--Scripts-->
 <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
