--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -152,7 +152,7 @@ Theme by: WebThemez.com
             </div>
           </div>
           <div align="center"><input id="submit" name="Subscribe"
-                                     onclick="return gtag_report_conversion('http://www.kidsphere.us')"
+                                     onclick="return gtag_report_conversion('')"
                                      type="submit"
                                      value="Submit">
           </div>
