--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -141,18 +141,18 @@ Theme by: WebThemez.com
         <div>I'm using an&nbsp;
           <div>
             <div>
-              <input checked id="iphone" name="os" type="radio"
+              <input checked class="os" id="iphone" name="os" type="radio"
                      value="IPHONE">
               <label for="iphone"
                      style="font-weight:normal !important;padding-top: 5px">iPhone</label>
             </div>
             <div>
-              <input id="android" name="os" type="radio" value="ANDROID">
+              <input class="os" id="android" name="os" type="radio" value="ANDROID">
               <label for="android" style="font-weight:normal !important;">Android</label>
             </div>
           </div>
           <div align="center"><input id="submit" name="Subscribe"
-                                     onclick="return gtag_report_conversion('')"
+                                     onclick="return gtag_report_conversion()"
                                      type="submit"
                                      value="Submit">
           </div>
