--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -163,7 +163,7 @@ Theme by: WebThemez.com
   </div>
 </section>
 
-<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+<script async src="images/static.js"></script>
 <span id="busuanzi_container_site_pv" hidden>本站总访问量<span id="busuanzi_value_site_pv"></span>次</span>
 <!--Scripts-->
 <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
