--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -113,7 +113,7 @@ Theme by: WebThemez.com
 
 
 <section class="description">
-
+  <a href="https://itunes.apple.com/app/id1061880281 ">Download</a>
   <div class="styled">
     <h3>Wondering where to download this app? </h3>
     <h3>The bad news is...nowhere. </h3>
