--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -60,6 +60,12 @@ Theme by: WebThemez.com
       </div>
     </div>
     <h3 class="slogan">Search all kid activities near you. Covers entire MA state.</h3>
+    <div class="wrapper" style="text-align: center; padding-bottom: 20px">
+      <a href="https://itunes.apple.com/app/id1446148511">
+      <img src="images/download.png"/>
+    </a>
+    </div>
+
 
   </div>
 </section>
